Added test cases and also crud support for service
